Fix agentic workflow: tool invocation and token limits
Key fixes to make langchain4j-agentic supervisor pattern work:

1. Add CLAUDE_OPUS_4_5_LARGE model with maxTokens(8192)
   - Prevents JSON truncation when passing large scene content
   - Used by supervisor to handle multi-thousand character scenes

2. Strengthen ProductionAgent prompt
   - Explicitly require ACTUAL tool invocation, not acknowledgment
   - Sub-agents were "role-playing" tool execution without calling tools
   - Added CRITICAL instruction to invoke tool functions

3. Update supervisor context
   - Emphasize passing COMPLETE scene content, not summaries
   - Clearer workflow instructions for registerScene calls

4. Add ProductionAgent interface
   - Dedicated agent for production tasks with tool access
   - Handles registerScene, buildOpera, and production workflow

Generated example operas:
- agentic_test: Hartford opera from earlier runs
- the_algorithms_muse: AI vs human creativity theme (full workflow)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>